{
  "sourceLanguage" : "en",
  "strings" : {
    "" : {

    },
    "Add step" : {

    },
    "Add Step" : {

    },
    "Add Trip" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Agregar Viaje"
          }
        }
      }
    },
    "Cancel" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancelar"
          }
        }
      }
    },
    "Clear" : {

    },
    "Current Location" : {

    },
    "Date" : {

    },
    "Edit" : {

    },
    "Edit Trip" : {

    },
    "Enable automatic trip tracking" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Habilitar el seguimiento automático de viajes"
          }
        }
      }
    },
    "End Date" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fecha final"
          }
        }
      }
    },
    "Home" : {

    },
    "Journal" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Diario"
          }
        }
      }
    },
    "Location Search" : {

    },
    "Name your trip" : {

    },
    "Pick something from the list." : {

    },
    "Recent Locations" : {

    },
    "Recent Searches" : {

    },
    "Restaurants" : {

    },
    "Result 1" : {

    },
    "Result 2d" : {

    },
    "Result 3" : {

    },
    "SAMPLES" : {

    },
    "Save" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ahorrar"
          }
        }
      }
    },
    "Select a View" : {

    },
    "Shops" : {

    },
    "Start Date" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fecha de inicio"
          }
        }
      }
    },
    "Trip Title" : {

    },
    "Trips" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Viajes"
          }
        }
      }
    },
    "Weston-Super-Mare" : {

    }
  },
  "version" : "1.0"
}